Switching to the unified folder inbox using folder mode settings hangs with high memory, high activity in morkTableMapIter::NextTable
Categories
(Thunderbird :: Folder and Message Lists, defect, P3)
Tracking
(thunderbird111 wontfix, thunderbird112 wontfix, thunderbird113 fixed)
People
(Reporter: emilio, Assigned: darktrojan)
References
(Blocks 1 open bug)
Details
(Keywords: hang, perf, Whiteboard: [Supernova3p])
Attachments
(2 files)
|
36.59 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
I was playing with the folder mode settings, and as soon as I try that my Daily hangs.
My guess is that there's some quadratic algorithm going on in there or something terribly slow because I had to kill it to get a crash report
- https://crash-stats.mozilla.org/report/index/7ee6c539-af30-4d81-b08a-7febe0230217
- https://crash-stats.mozilla.org/report/index/9b0c4627-c3de-4cec-bc76-e84e30230217
This is a somewhat massive profile. I tried taking a performance profile but daily will just not terminate :'(
Comment 1•3 years ago
|
||
Check how much memory is being used.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 2•3 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #0)
I was playing with the folder mode settings, and as soon as I try that my Daily hangs.
My guess is that there's some quadratic algorithm going on in there or something terribly slow because I had to kill it to get a crash report
No bug report for this signature @ nsTArray_Impl<T>::RemoveElementsAt | nsTArray_Impl<T>::RemoveElementAt | nsMsgDBView::RemoveByIndex
No bug report for this signature @ <style::gecko::wrapper::GeckoNode as style::dom::TNode>::as_element
| Reporter | ||
Comment 3•3 years ago
|
||
Memory usage balloons until the program exits indeed.
I don't expect a particular signature to show up. Thunderbird is doing a lot of stuff so the bottommost frame is basically "whatever it was doing at the time". The frames at the top might be more useful.
Updated•3 years ago
|
Comment 4•3 years ago
|
||
I am not able to reproduce this on Mac. I haven't tried Windows. Also not able to find other version 111 or 112 reports of hang or memory in bugzilla.
Emilio, do you have any more data?
Thomas, can you reproduce on any or all of your OS?
Until we can reproduce or identify the cause let's reduce this to sev=3
Comment 5•3 years ago
|
||
Hi guys, first of all congratulations for Supernova: you are doing an excellent job! Many thanks!
I can confirm that, with a total of 270K emails, switching to the unified folder inbox, the program hangs for about 3 minutes.
Here with TB 111.0b1 (but also in Daily).
| Reporter | ||
Comment 6•3 years ago
|
||
Aureliano, since you seem to be able to repro this but not hang your machine, is there any chance you could take a profile? For me since I removed my mail db I haven't seen this issue.
Comment 7•3 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #6)
Aureliano, since you seem to be able to repro this but not hang your machine, is there any chance you could take a profile? For me since I removed my mail db I haven't seen this issue.
I suggest reducing the sample rate when getting the profile, so it's not to big to upload.
https://support.mozilla.org/en-US/kb/profiling-thunderbird-performance
Comment 8•3 years ago
|
||
It might be helpful to determine why this fails for some users and not others.
Can anyone else reproduce?
Comment 9•3 years ago
•
|
||
(In reply to Wayne Mery (:wsmwk) from comment #8)
It might be helpful to determine why this fails for some users and not others.
Can anyone else reproduce?
I tested with 111.0b3. After switching to Unified folder view, I didn't get a hang. Nothing in Error Console either. My profile is 81GB.
Comment 10•3 years ago
|
||
On Windows, on a instance with only ONE account, I see a definitely delay of the message list when clicking on most unified folders. But nothing more
Comment 11•3 years ago
|
||
I can't reproduce on a MacBook Pro from 2021 with M1 Pro, macOS 13.2.1 and seven mail accounts in my Thunderbird. I have no idea how many e-mails there are in total, but I guess less than 10,000.
Comment 12•3 years ago
•
|
||
Here my profiling result as permalink https://share.firefox.dev/3yiQwGT
I'm on TB 111.0b2 and now I have an hang time of about 80 seconds
I have 270,000 emails.
To be more precise, when I'm in Unified Folder mode, I have the same freeze when I move from one folder to another for example from inbox to sentbox.
Comment 13•3 years ago
•
|
||
After switching to Unified, my TB hangs indefinitely (well, 10 mins at least); 100% of a cpu core, but no increase in RAM usage (2.5GB). The app becomes "not responding" and I have to Force Quit.
MacOS 13.2.1 — Daily 2023-03-09, 52GB profile, 300K messages.
Annoyingly, I now can't start TB up at all, since it now hangs at start. Anyone know how to switch back to All, from Unified, via adjusting prefs? I don't see a Unified in prefs.js.
Comment 14•3 years ago
|
||
Managed to recover it via a forced-downgrade to a pre-SN version; phew!
Comment 15•3 years ago
|
||
Thanks Aureliano!
(In reply to [:Aureliano Buendía] from comment #12)
Here my profiling result as permalink https://share.firefox.dev/3yiQwGT
I'm on TB 111.0b2 and now I have an hang time of about 80 seconds
I have 270,000 emails.To be more precise, when I'm in Unified Folder mode, I have the same freeze when I move from one folder to another for example from inbox to sentbox.
The profile goes bad at morkTableMapIter::NextTable.
Yes, the screen shots in the profile suggest 75 seconds of yank!
Comment 16•3 years ago
|
||
(In reply to [:Aureliano Buendía] from comment #12)
Here my profiling result as permalink https://share.firefox.dev/3yiQwGT
I'm on TB 111.0b2 and now I have an hang time of about 80 seconds
I have 270,000 emails.To be more precise, when I'm in Unified Folder mode, I have the same freeze when I move from one folder to another for example from inbox to sentbox.
I would guess there's no improvement using 111.0b4 or 112.0b1?
Updated•3 years ago
|
Comment 17•3 years ago
|
||
(In reply to Arthur K. (he/him) from comment #16)
I would guess there's no improvement using 111.0b4 or 112.0b1?
With 112 it's better (about 20-30 seconds delay), however it remains practically unusable in a working environment
Comment 18•3 years ago
|
||
I was hoping you would answer :) "Better" is good to hear.
Can you get a new performance profile?
Comment 19•3 years ago
|
||
Hi Wayne I have no doubt it will get better and better...
Here my profiling result as permalink https://share.firefox.dev/3yPuxr4
Comment 20•3 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #15)
The profile goes bad at morkTableMapIter::NextTable.
Right, I think we have other bugs also arriving there. But I don't know why.
Comment 21•3 years ago
|
||
(In reply to [:Aureliano Buendía] from comment #17)
(In reply to Arthur K. (he/him) from comment #16)
I would guess there's no improvement using 111.0b4 or 112.0b1?
With 112 it's better (about 20-30 seconds delay), however it remains practically unusable in a working environment
Thanks for the reply. 20-30 seconds is far better than 80 seconds but surely not where it needs to be. All the side effects from work on Supernova is going to take some time to shake out. Still looking like it's tripping over at the morkTableMapIter::NextTable as Wayne stated in comment 15.
Comment 22•3 years ago
|
||
How is this with 112.0b3 ?
Comment 23•3 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #22)
How is this with 112.0b3 ?
same behavior as the previous version
Updated•3 years ago
|
Comment 24•3 years ago
|
||
How is it now, after b4, b5, b6 ? (there was at least one important uplift)
| Reporter | ||
Comment 25•3 years ago
|
||
I use daily, without issue since I blew up my local mail.
Comment 26•3 years ago
|
||
Slightly improved performance, but problem still exists:
- Pass from All Folders a unified folder of about 14"-15";
- Go from Inbox (270k mail) to Sentbox (100K mail) about 3"-5"
- Return from Sentbox to Inbox about 12"-13"
Here my profiling result as permalink https://share.firefox.dev/3KBGQhG in TB 112.0b6 (64bit) on Windows 11
Comment 27•3 years ago
|
||
(In reply to [:Aureliano Buendía] from comment #26)
Here my profiling result as permalink https://share.firefox.dev/3KBGQhG in TB 112.0b6 (64bit) on Windows 11
Comment 28•3 years ago
|
||
(Nothing to add, tripping over morkTableMapIter::NextTable as previously noticed.)
Comment 29•3 years ago
|
||
(In reply to [:Aureliano Buendía] from comment #26)
Slightly improved performance, but problem still exists:
- Pass from All Folders a unified folder of about 14"-15";
- Go from Inbox (270k mail) to Sentbox (100K mail) about 3"-5"
- Return from Sentbox to Inbox about 12"-13"
Here my profiling result as permalink https://share.firefox.dev/3KBGQhG in TB 112.0b6 (64bit) on Windows 11
Any improvement with 113.0b1?
Comment 30•3 years ago
|
||
(In reply to Arthur K. (he/him) from comment #29)
Any improvement with 113.0b1?
The behavior is worse than the previous version: to switch from one mode to another takes more than 180" (previously, they were "only" 14"-15").
Here my profiling result as permalink https://share.firefox.dev/41dMBaG
Thanks!
Updated•3 years ago
|
| Assignee | ||
Comment 31•3 years ago
|
||
Now we have a new problem on top of the other one. I think I know what might be causing it, but not why that would start happening now. I'll deal with it in a new bug.
| Assignee | ||
Comment 32•3 years ago
|
||
(In reply to [:Aureliano Buendía] from comment #30)
The behavior is worse than the previous version: to switch from one mode to another takes more than 180" (previously, they were "only" 14"-15").
Here my profiling result as permalink https://share.firefox.dev/41dMBaG
Does this additional wait happen if you add the Unified mode without removing the All mode? From the profile it looks like we're trying to select a folder over and over again, possibly because the number of rows in the folder tree drops to zero.
Comment 34•3 years ago
|
||
(In reply to Geoff Lankow (:darktrojan) from comment #32)
Does this additional wait happen if you add the Unified mode without removing the All mode? From the profile it looks like we're trying to select a folder over and over again, possibly because the number of rows in the folder tree drops to zero.
When I click on 'Unified Folders', 'All Folders' remains flagged on. I click again immediately to remove the 'All Folders' check, which is removed after about 100". In theory it seems that by design a user can choose to see multiple modes at the same time: for example when I return to 'All Folders' mode, if I don't remove the flag 'Unified Folders' I see both modes.
| Assignee | ||
Comment 35•3 years ago
|
||
That's not what I asked. If you don't click to remove the check on All Folders, does the extra delay happen or not?
Comment 36•3 years ago
|
||
I try to be clearer:
- I open TB with only 'All FOlders' mode on;
- I click on 'Unified Folders' mode: TB does not hangs and currently 'All Folders' and 'Unified Folders' are both active and visible;
- scroll down to the 'Unified Folders' section;
- click on the Inbox folder ('Unified Folders') and TB hangs as in the previous scenario.
I attach the result of the profiling as a permalink https://share.firefox.dev/3oaqeon
Comment 37•3 years ago
|
||
I'm seeing the same hang/slowness with 113.0b2 on Windows 11 Pro, 64-bit. I believe the hang appears to happen when unchecking "All folders" because that forces the Unified Inbox to become selected - but I get the same hack if I leave "All Folders" enabled and just switch to the Unified Folders Inbox. I have the same behavior on restart - Tb hands indefinitely until I reset in Safe Mode back to All Folders view.
I tried minidumping but didn't see anything obvious (except most time spent in IO as per Visual Studio).
Deleting global messages db didn't help, nor did deleting the smart mailboxes config (both suggestions I found for related issues).
| Assignee | ||
Comment 38•3 years ago
|
||
I think I've figured out what's going on, and it's ugly. But it should be fixable.
| Assignee | ||
Comment 39•3 years ago
|
||
This functionality was added to the base nsMsgDBView, but not these subclasses.
| Assignee | ||
Updated•3 years ago
|
Comment 40•3 years ago
|
||
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/d0c328a2cc33
Wrap loading of virtual folder views in batch notifications. r=leftmostcat
| Assignee | ||
Updated•3 years ago
|
Comment 41•3 years ago
|
||
Comment on attachment 9329406 [details]
Bug 1817367 - Wrap loading of virtual folder views in batch notifications. r=#thunderbird-reviewers
[Triage Comment]
Approved for beta
Comment 42•3 years ago
|
||
| bugherder uplift | ||
Thunderbird 113.0b4:
https://hg.mozilla.org/releases/comm-beta/rev/1601d42ce0f4
Updated•3 years ago
|
Comment 43•3 years ago
|
||
In TB 113.0b4 issue in comment 30 now is fixed, but performance has returned to roughly what it was at the time of comment 26: about 10" delay with the steps referred to in comment 36. Should be open a new issue?
Comment 44•3 years ago
|
||
I have opened a new issue Bug #1830145 that you can reproduce with the same STRs in https://bugzilla.mozilla.org/show_bug.cgi?id=1817367#c36
with the exception that in Unified Folders mode, View-Threads-All must be set.
Description
•