Bug 1817367 - Wrap loading of virtual folder views in batch notifications. r=leftmostcat This functionality was added to the base `nsMsgDBView`, but not these subclasses.

Differential Revision: https://phabricator.services.mozilla.com/D175974

--HG--
extra : rebase_source : 4ca3cf372be8029d76bbfeecfcb406d197f0dbb6
extra : amend_source : 8722f310135f7c5f58cb1dcd4573189b3e225e6e